src/static/room.css
/* ... */
.message-box.notimes {
  padding-left: 0;
}
.message-box.notimes .message > .line time {
  display: none;
}
.message-box.notimes .input-bar .input-info-cell {
  display: none;
}

.message-pane {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  overflow-y: scroll;
  overflow-x: auto;
}
.message-pane > .message-box {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  -webkit-justify-content: flex-end;
  flex-direction: column;
  justify-content: flex-end;
  min-height: 100%;
  box-sizing: border-box;
  padding: 5px 5px 5px 3.5em;
  overflow: visible;
}
.message-pane > .message-box.notimes {
  padding-left: 5px;
}

.message-pane > .message-box > .message:last-child {
  margin-bottom: 2px;
}

.popups-wrapper, .windows-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
.windows-wrapper {
  pointer-events: none;
}
.windows-wrapper > * {
  pointer-events: auto;
}
.popups-wrapper.empty, .popups-wrapper.hidden,
.windows-wrapper.empty {
  display: none;
}

.popups-wrapper {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
}

.popups-menu {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-shrink: 0;
  flex-shrink: 0;
  border-bottom: 2px solid black;
  background: white;
  z-index: 1100;
}
.popups-menu > * {
  line-height: 1.2;
  margin: auto 0.4em;
}
.popups-menu > .big-text {
  font-size: 1.5em;
}
.popups-menu > .filler {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  margin: 0;
}
.popups-menu > .separator {
  display: inline-block;
  width: 1px;
  margin: 0;
  background: black;
}
.popups-menu > .button {
  width: 2em;
  height: 2em;
  margin: auto 0;
  line-height: 0;
  background: white;
}
.popups-menu > .button:hover {
  background: #c0c0c0;
}
.popups-menu > .button:active {
  background: #808080;
}

.popups-menu-entry {
  position: relative;
  margin: 0;
}
.popups-menu-entry > .button {
  border: none;
  margin: 0;
  padding: 0.4em;
  outline-offset: -1px;
}
.popups-menu-entry .popups-menu-menu {
  position: absolute;
  left: -2px;
  min-width: 100%;
  visibility: hidden;
  background: white;
  border: 2px solid black;
  border-top-width: 0;
  white-space: nowrap;
}
.popups-menu-entry .popups-menu-menu > .button {
  display: block;
  width: 100%;
  padding: 3px 0.4em;
  text-align: left;
  border: none;
  outline-offset: -1px;
}
.popups-menu-entry .popups-menu-menu > .separator {
  display: block;
  width: 100%;
  height: 1px;
  border: none;
  background: black;
}
.popups-menu-entry.open > .button {
  font-weight: bold;
}
.popups-menu-entry.open .popups-menu-menu,
.popups-menu:not(.entry-open) .popups-menu-entry:hover .popups-menu-menu {
  visibility: visible;
}

.popups-menu .narrow-screen {
  display: none;
}

@media (max-width: 400px) {

  .popups-menu .logo-small {
    line-height: 0;
  }
  .popups-menu .logo-small img {
    margin: 0;
    vertical-align: top;
  }
  .popups-menu .logo-small strong {
    display: none;
  }

  .popups-menu .narrow-screen {
    display: initial;
  }
  .popups-menu .wide-screen {
    display: none;
  }

}

.popups-content {
  /* Specifying a non-auto flex-basis to make Chrome accept the percentage
   * height of the .popups inside. */
  -webkit-flex: 1 0 0;
  flex: 1 0 0;
  overflow: auto;
}
.popups {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
  min-height: 100%;
  padding: 0.5em;
  box-sizing: border-box;
  background: rgba(255, 255, 255, 0.5);
  z-index: 1000;
}
.popups > .popup {
  margin: 0.5em auto;
  max-width: 100%;
}
.popups > .popup:first-child {
  margin-top: auto;
}
.popups > .popup:last-child {
  margin-bottom: auto;
}
.windows {
  z-index: 900;
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  -webkit-flex-wrap: wrap;
  flex-direction: column;
  flex-wrap: wrap;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 50%;
  padding: 1em;
  box-sizing: border-box;
  overflow: hidden;
}

.popup {
  position: relative;
  margin: auto;
  border: 2px solid black;
  background: white;
  word-wrap: break-word;
  box-sizing: border-box;
}
.popup:target {
  box-shadow: 0 0 10px #808080;
}

.popup .popup-header {
  display: -webkit-flex;
  display: flex;
  background: white;
  border-bottom: 1px solid black;
}
.popup .popup-title {
  font-weight: bold;
  margin-right: auto;
  padding: 5px;
  line-height: 1.2em;
}
.popup .popup-title-sep {
  width: 1px;
  -webkit-flex-shrink: 0;
  flex-shrink: 0;
  background: black;
}
.popup .popup-button {
  margin: auto 0;
  border: 0;
  padding: 0;
  line-height: 0;
  outline-offset: -1px;
}
.popup .popup-button img {
  width: 1.2em;
  height: 1.2em;
  margin: 5px;
}

.popup .popup-content {
  padding: 5px;
}
.popup .popup-content hr {
  margin: 5px 0;
  border: 0;
  padding: 0;
  height: 1px;
  background: black;
}
.popup .popup-content:empty {
  padding-top: 0;
}

.popup .popup-message {
  margin: 0 5px 5px 5px;
  min-height: 1.2em;
}
.popup .popup-message-close-wrapper {
  float: right;
}
.popup .popup-message-close {
  display: inline-block;
  position: relative;
  border: 0;
  padding: 0;
  width: 1.2em;
  height: 1.2em;
  vertical-align: baseline;
  line-height: 0;
}
.popup .popup-message-close img {
  display: inline-block;
  width: 100%;
  height: 100%;
}
.popup .popup-message-error {
  background: rgba(192, 0, 0, 0.2);
  color: #c00000;
}
.popup .popup-message-warning {
  background: rgba(192, 192, 0, 0.2);
  color: #808000;
}
.popup .popup-message-success {
  background: rgba(0, 192, 0, 0.2);
  color: #008000;
}
.popup .popup-message-info {
  background: rgba(0, 128, 255, 0.2);
  color: #0080ff;
}

.popup .popup-bottom {
  display: -webkit-flex;
  display: flex;
  -webkit-justify-content: flex-end;
  -webkit-flex-wrap: wrap;
  justify-content: flex-end;
  flex-wrap: wrap;
  margin: 0 5px 5px 5px;
}
.popup .popup-bottom:empty {
  margin-bottom: 0;
}
/* ... */

